--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,8 +21,14 @@ jobs:
       run: make --directory=ci alpine_java_test
     - name: Test .Net
       run: make --directory=ci alpine_dotnet_test
-    - name: Test Install project
-      run: make --directory=ci alpine_install_test
+    - name: Test C++ Install
+      run: make --directory=ci alpine_cpp_install_test
+    - name: Test Python Install
+      run: make --directory=ci alpine_python_install_test
+    - name: Test Java Install
+      run: make --directory=ci alpine_java_install_test
+    - name: Test .Net Install
+      run: make --directory=ci alpine_dotnet_install_test
 
   Archlinux:
     runs-on: ubuntu-latest
@@ -42,8 +48,14 @@ jobs:
       run: make --directory=ci archlinux_java_test
     - name: Test .Net
       run: make --directory=ci archlinux_dotnet_test
-    - name: Test Install project
-      run: make --directory=ci archlinux_install_test
+    - name: Test C++ Install
+      run: make --directory=ci archlinux_cpp_install_test
+    - name: Test Python Install
+      run: make --directory=ci archlinux_python_install_test
+    - name: Test Java Install
+      run: make --directory=ci archlinux_java_install_test
+    - name: Test .Net Install
+      run: make --directory=ci archlinux_dotnet_install_test
 
   Centos:
     runs-on: ubuntu-latest
@@ -63,8 +75,14 @@ jobs:
       run: make --directory=ci centos_java_test
     - name: Test .Net
       run: make --directory=ci centos_dotnet_test
-    - name: Test Install project
-      run: make --directory=ci centos_install_test
+    - name: Test C++ Install
+      run: make --directory=ci centos_cpp_install_test
+    - name: Test Python Install
+      run: make --directory=ci centos_python_install_test
+    - name: Test Java Install
+      run: make --directory=ci centos_java_install_test
+    - name: Test .Net Install
+      run: make --directory=ci centos_dotnet_install_test
 
   Debian:
     runs-on: ubuntu-latest
@@ -84,8 +102,14 @@ jobs:
       run: make --directory=ci debian_java_test
     - name: Test .Net
       run: make --directory=ci debian_dotnet_test
-    - name: Test Install project
-      run: make --directory=ci debian_install_test
+    - name: Test C++ Install
+      run: make --directory=ci debian_cpp_install_test
+    - name: Test Python Install
+      run: make --directory=ci debian_python_install_test
+    - name: Test Java Install
+      run: make --directory=ci debian_java_install_test
+    - name: Test .Net Install
+      run: make --directory=ci debian_dotnet_install_test
 
   Fedora:
     runs-on: ubuntu-latest
@@ -105,8 +129,14 @@ jobs:
       run: make --directory=ci fedora_java_test
     - name: Test .Net
       run: make --directory=ci fedora_dotnet_test
-    - name: Test Install project
-      run: make --directory=ci fedora_install_test
+    - name: Test C++ Install
+      run: make --directory=ci fedora_cpp_install_test
+    - name: Test Python Install
+      run: make --directory=ci fedora_python_install_test
+    - name: Test Java Install
+      run: make --directory=ci fedora_java_install_test
+    - name: Test .Net Install
+      run: make --directory=ci fedora_dotnet_install_test
 
   OpenSuse:
     runs-on: ubuntu-latest
@@ -126,8 +156,14 @@ jobs:
       run: make --directory=ci opensuse_java_test
     - name: Test .Net
       run: make --directory=ci opensuse_dotnet_test
-    - name: Test Install project
-      run: make --directory=ci opensuse_install_test
+    - name: Test C++ Install
+      run: make --directory=ci opensuse_cpp_install_test
+    - name: Test Python Install
+      run: make --directory=ci opensuse_python_install_test
+    - name: Test Java Install
+      run: make --directory=ci opensuse_java_install_test
+    - name: Test .Net Install
+      run: make --directory=ci opensuse_dotnet_install_test
 
   Ubuntu:
     runs-on: ubuntu-latest
@@ -147,5 +183,11 @@ jobs:
       run: make --directory=ci ubuntu_java_test
     - name: Test .Net
       run: make --directory=ci ubuntu_dotnet_test
-    - name: Test Install project
-      run: make --directory=ci ubuntu_install_test
+    - name: Test C++ Install
+      run: make --directory=ci ubuntu_cpp_install_test
+    - name: Test Python Install
+      run: make --directory=ci ubuntu_python_install_test
+    - name: Test Java Install
+      run: make --directory=ci ubuntu_java_install_test
+    - name: Test .Net Install
+      run: make --directory=ci ubuntu_dotnet_install_test
