ci: disable fail-fast for docker workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,7 @@ jobs:
       matrix:
         distro: [alpine, archlinux, centos, debian, fedora, opensuse, ubuntu]
         lang: [cpp, python, dotnet, java]
+      fail-fast: false
     env:
       DISTRO: ${{ matrix.distro }}
       LANG: ${{ matrix.lang }}
