--- a/FooBar/dotnet/CMakeLists.txt
+++ b/FooBar/dotnet/CMakeLists.txt
@@ -8,6 +8,7 @@ swig_add_library(dotnet_FooBar
   OUTPUT_DIR ${PROJECT_BINARY_DIR}/dotnet/${PROJECT_NAME}/FooBar
 	SOURCES	foobar.i)
 set_target_properties(dotnet_FooBar PROPERTIES
+  SWIG_INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/dotnet
   SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON
   POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(dotnet_FooBar PRIVATE CMakeSwig::FooBar)
