--- a/Bar/java/CMakeLists.txt
+++ b/Bar/java/CMakeLists.txt
@@ -8,6 +8,9 @@ swig_add_library(java_Bar
   OUTPUT_DIR ${PROJECT_BINARY_DIR}/java/net/mizux/cmakeswig/bar
 	SOURCES	bar.i)
 
-set_property(TARGET java_Bar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
+set_target_properties(java_Bar PROPERTIES
+  SWIG_INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/java
+  SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON
+  POSITION_INDEPENDENT_CODE ON)
 target_include_directories(java_Bar PRIVATE ${JNI_INCLUDE_DIRS})
 target_link_libraries(java_Bar PRIVATE CMakeSwig::Bar)
