--- a/dotnet/Mizux.CMakeSwig.csproj.in
+++ b/dotnet/Mizux.CMakeSwig.csproj.in
@@ -58,14 +58,13 @@
     <RestoreSources>@DOTNET_PACKAGES_DIR@;$(RestoreSources);https://api.nuget.org/v3/index.json</RestoreSources>
   </PropertyGroup>
 
-  <ItemGroup Condition="Exists('@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.linux-x64.@PROJECT_VERSION@.nupkg')">
-    <PackageReference Include="Mizux.CMakeSwig.runtime.linux-x64" Version="@PROJECT_VERSION@"/>
-  </ItemGroup>
-  <ItemGroup Condition="Exists('@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.osx-x64.@PROJECT_VERSION@.nupkg')">
-    <PackageReference Include="Mizux.CMakeSwig.runtime.osx-x64" Version="@PROJECT_VERSION@"/>
-  </ItemGroup>
-  <ItemGroup Condition="Exists('@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.win-x64.@PROJECT_VERSION@.nupkg')">
-    <PackageReference Include="Mizux.CMakeSwig.runtime.win-x64" Version="@PROJECT_VERSION@"/>
+  <ItemGroup>
+    <RuntimeLinux Include="@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.linux-x64.*.nupkg"/>
+    <RuntimeOsx Include="@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.osx-x64.*.nupkg"/>
+    <RuntimeWin Include="@DOTNET_PACKAGES_DIR@/Mizux.CMakeSwig.runtime.win-x64.*.nupkg"/>
+    <PackageReference Include="Mizux.CMakeSwig.runtime.linux-x64" Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeLinux)')"/>
+    <PackageReference Include="Mizux.CMakeSwig.runtime.osx-x64" Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeOsx)')"/>
+    <PackageReference Include="Mizux.CMakeSwig.runtime.win-x64" Version="@PROJECT_VERSION@" Condition="Exists('@(RuntimeWin)')"/>
   </ItemGroup>
 </Project>
 
