--- a/Bar/CMakeLists.txt
+++ b/Bar/CMakeLists.txt
@@ -1,21 +1,17 @@
 add_library(Bar "")
+
 target_sources(Bar
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/bar/Bar.hpp>
-    $<INSTALL_INTERFACE:include/bar/Bar.hpp>
   PRIVATE
-    src/Bar.cpp
-)
+    include/bar/Bar.hpp
+    src/Bar.cpp)
 target_include_directories(Bar
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-)
+    $<INSTALL_INTERFACE:include>)
 target_compile_features(Bar PUBLIC cxx_std_11)
 set_target_properties(Bar PROPERTIES
   VERSION ${PROJECT_VERSION}
-  PUBLIC_HEADER $<TARGET_PROPERTY:Bar,INTERFACE_SOURCES>
-)
+  PUBLIC_HEADER include/bar/Bar.hpp)
 #target_link_libraries(Bar PUBLIC ...)
 add_library(${PROJECT_NAME}::Bar ALIAS Bar)
 
