--- a/Foo/CMakeLists.txt
+++ b/Foo/CMakeLists.txt
@@ -1,21 +1,17 @@
 add_library(Foo "")
+
 target_sources(Foo
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/foo/Foo.hpp>
-    $<INSTALL_INTERFACE:include/foo/Foo.hpp>
   PRIVATE
-    src/Foo.cpp
-  )
+    include/foo/Foo.hpp
+    src/Foo.cpp)
 target_include_directories(Foo
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-  )
+    $<INSTALL_INTERFACE:include>)
 target_compile_features(Foo PUBLIC cxx_std_11)
 set_target_properties(Foo PROPERTIES
   VERSION ${PROJECT_VERSION}
-  PUBLIC_HEADER $<TARGET_PROPERTY:Foo,INTERFACE_SOURCES>
-  )
+  PUBLIC_HEADER include/foo/Foo.hpp)
 #target_link_libraries(Foo PUBLIC ...)
 add_library(${PROJECT_NAME}::Foo ALIAS Foo)
 
