--- a/ci/docker/manylinux/Dockerfile
+++ b/ci/docker/manylinux/Dockerfile
@@ -1,23 +1,24 @@
 # Create a virtual environment with all tools installed
 FROM quay.io/pypa/manylinux2010_x86_64:latest AS env
 LABEL maintainer="mizux.dev@gmail.com"
-ENV PATH=$PATH:/usr/local/bin
+# Install system build dependencies
+ENV PATH=/usr/local/bin:$PATH
+
 RUN yum -y update \
-&& yum -y groupinstall 'Development Tools' \
-&& yum -y install wget pcre-devel which redhat-lsb-core \
+&& yum -y install git wget openssl-devel pcre-devel \
+&& yum -y groupinstall "Development Tools" \
 && yum clean all \
 && rm -rf /var/cache/yum
+
 # Install CMake 3.16.4
 RUN wget "https://cmake.org/files/v3.16/cmake-3.16.4-Linux-x86_64.sh" \
 && chmod a+x cmake-3.16.4-Linux-x86_64.sh \
-&& ./cmake-3.16.4-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
+&& ./cmake-3.16.4-Linux-x86_64.sh --prefix=/usr/local --skip-license \
 && rm cmake-3.16.4-Linux-x86_64.sh
-CMD [ "/bin/sh" ]
-
 # CMake version
 RUN cmake -version
 
-# Swig install
+# Install Swig 4.0.1
 RUN wget "https://downloads.sourceforge.net/project/swig/swig/swig-4.0.1/swig-4.0.1.tar.gz" \
 && tar xvf swig-4.0.1.tar.gz \
 && rm swig-4.0.1.tar.gz \
@@ -28,5 +29,12 @@ RUN wget "https://downloads.sourceforge.net/project/swig/swig/swig-4.0.1/swig-4.
 && cd .. \
 && rm -rf swig-4.0.1
 
-COPY build_manylinux.sh .
+FROM env AS devel
+WORKDIR /home/project
+COPY . .
+
+COPY ci/build_manylinux.sh .
 RUN chmod a+x build_manylinux.sh
+
+FROM devel AS build
+RUN ./build_manylinux.sh
