--- a/FooBar/python/CMakeLists.txt
+++ b/FooBar/python/CMakeLists.txt
@@ -8,7 +8,7 @@ set_property(TARGET pyFooBar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
 target_include_directories(pyFooBar
 	PRIVATE
 	../include
-	${PYTHON_INCLUDE_DIRS}
+	${Python_INCLUDE_DIRS}
 	)
 # note: macOS is APPLE and also UNIX !
 if(APPLE)
@@ -31,5 +31,5 @@ target_link_libraries(pyFooBar PRIVATE FooBar)
 # i.e. we can't use: $<$<PLATFORM_ID:Windows>:${PYTHON_LIBRARIES}>
 # see: https://cmake.org/cmake/help/git-stage/command/target_link_libraries.html#command:target_link_libraries
 if(MSVC)
-  target_link_libraries(pyFooBar	PRIVATE	${PYTHON_LIBRARIES})
+  target_link_libraries(pyFooBar	PRIVATE	${Python_LIBRARIES})
 endif()
