--- a/FooBar/java/CMakeLists.txt
+++ b/FooBar/java/CMakeLists.txt
@@ -1,10 +1,10 @@
 set_property(SOURCE foobar.i PROPERTY CPLUSPLUS ON)
 set_property(SOURCE foobar.i PROPERTY COMPILE_OPTIONS
-  -package net.mizux.cmakeswig.foobar)
+  -package org.mizux.cmake-swig.foobar)
 swig_add_library(java_FooBar
   TYPE SHARED
   LANGUAGE java
-  OUTPUT_DIR ${PROJECT_BINARY_DIR}/java/net/mizux/cmakeswig/foobar
+  OUTPUT_DIR ${PROJECT_BINARY_DIR}/java/org/mizux/cmake-swig/foobar
   SOURCES foobar.i)
 
 set_target_properties(java_FooBar PROPERTIES
