--- a/java/pom.xml.in
+++ b/java/pom.xml.in
@@ -12,11 +12,13 @@
   </parent>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
-  <groupId>net.mizux.cmakeswig</groupId>
-  <artifactId>cmakeswig-parent</artifactId>
+  <groupId>org.mizux.cmake-swig</groupId>
+  <artifactId>cmake-swig-java</artifactId>
   <packaging>pom</packaging>
   <version>@PROJECT_VERSION@</version>
   <name>CMakeSwig (Parent)</name>
@@ -30,7 +32,8 @@
   <url>https://github.com/mizux/cmake-swig</url>
 
   <developers>
-    <developer>
+		<developer>
+			<name>Mizux Seiha</name>
       <organization>Mizux</organization>
       <organizationUrl>http://www.mizux.net</organizationUrl>
     </developer>
