--- a/FooBar/java/CMakeLists.txt
+++ b/FooBar/java/CMakeLists.txt
@@ -1,11 +1,11 @@
 set_property(SOURCE foobar.i PROPERTY CPLUSPLUS ON)
 set_property(SOURCE foobar.i PROPERTY COMPILE_OPTIONS
-  -package ${CMAKE_SWIG_JAVA}.foobar)
+  -package ${JAVA_PACKAGE}.foobar)
 swig_add_library(jniFooBar
   TYPE OBJECT
   LANGUAGE java
   OUTPUT_DIR
-  ${PROJECT_BINARY_DIR}/java/${CMAKE_SWIG_JAVA}/src/main/java/org/mizux/cmakeswig/foobar
+  ${PROJECT_BINARY_DIR}/java/${JAVA_PROJECT}/${JAVA_PACKAGE_PATH}/foobar
   SOURCES foobar.i)
 
 set_target_properties(jniFooBar PROPERTIES
