--- a/java/pom-test.xml.in
+++ b/java/pom-test.xml.in
@@ -5,8 +5,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 <modelVersion>4.0.0</modelVersion>
 
-<groupId>@CMAKE_SWIG_JAVA@</groupId>
-<artifactId>cmakeswig-test</artifactId>
+<groupId>@JAVA_PACKAGE@</groupId>
+<artifactId>@JAVA_TEST_PROJECT@</artifactId>
 <version>@PROJECT_VERSION@</version>
 <packaging>jar</packaging>
 
@@ -50,22 +50,32 @@
 
 <dependencies>
   <dependency>
-    <groupId>@CMAKE_SWIG_JAVA@</groupId>
-    <artifactId>cmakeswig-java</artifactId>
+    <groupId>@JAVA_PACKAGE@</groupId>
+    <artifactId>@JAVA_PROJECT@</artifactId>
     <version>@PROJECT_VERSION@</version>
     <type>jar</type>
     <scope>compile</scope>
   </dependency>
   <dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.13</version>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-engine</artifactId>
+    <version>5.7.0</version>
+    <scope>test</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-params</artifactId>
+    <version>5.7.0</version>
     <scope>test</scope>
   </dependency>
 </dependencies>
 
 <build>
   <plugins>
+    <plugin>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.22.2</version>
+    </plugin>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-source-plugin</artifactId>
