--- a/FooBarApp/CMakeLists.txt
+++ b/FooBarApp/CMakeLists.txt
@@ -20,7 +20,7 @@ target_link_libraries(FooBarApp
   )
 add_executable(${PROJECT_NAME}::FooBarApp ALIAS FooBarApp)
 
-add_test(NAME FooBarAppTest COMMAND FooBarApp)
+add_test(NAME cxx_FooBarApp_test COMMAND FooBarApp)
 
 # Install
 include(GNUInstallDirs)
