--- a/Bar/python/CMakeLists.txt
+++ b/Bar/python/CMakeLists.txt
@@ -2,7 +2,7 @@ set_property(SOURCE bar.i PROPERTY CPLUSPLUS ON)
 set_property(SOURCE bar.i PROPERTY SWIG_MODULE_NAME pyBar)
 swig_add_library(pyBar
   LANGUAGE python
-  OUTPUT_DIR ${CMAKE_BINARY_DIR}/python/${PROJECT_NAME}/Bar
+  OUTPUT_DIR ${CMAKE_BINARY_DIR}/python/${PYTHON_PROJECT}/Bar
   SOURCES bar.i)
 
 target_include_directories(pyBar
@@ -16,14 +16,14 @@ set_property(TARGET pyBar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
 if(APPLE)
   set_target_properties(pyBar PROPERTIES
     SUFFIX ".so"
-    INSTALL_RPATH "@loader_path;@loader_path/../../${PROJECT_NAME}/.libs"
+    INSTALL_RPATH "@loader_path;@loader_path/../../${PYTHON_PROJECT}/.libs"
     )
   set_property(TARGET pyBar APPEND PROPERTY
     LINK_FLAGS "-flat_namespace -undefined suppress"
     )
 elseif(UNIX)
   set_target_properties(pyBar PROPERTIES
-    INSTALL_RPATH "$ORIGIN:$ORIGIN/../../${PROJECT_NAME}/.libs"
+    INSTALL_RPATH "$ORIGIN:$ORIGIN/../../${PYTHON_PROJECT}/.libs"
     )
 endif()
 target_link_libraries(pyBar	PRIVATE	Bar)
