--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -14,7 +14,7 @@ class InstallPlatlib(install):
         self.install_lib=self.install_platlib
 
 setup(
-  name='@PROJECT_NAME@',
+  name='@PYTHON_PROJECT@',
   version='@PROJECT_VERSION@',
   author='Mizux',
   author_email='\"Mizux Seiha\" <mizux.dev@gmail.com>',
@@ -23,10 +23,10 @@ setup(
   cmdclass={'install': InstallPlatlib},
   packages=find_packages(),
   package_data={
-  '@PROJECT_NAME@':[$<$<NOT:$<PLATFORM_ID:Windows>>:'.libs/*'>],
-  '@PROJECT_NAME@.Foo':['$<TARGET_FILE_NAME:pyFoo>'],
-  '@PROJECT_NAME@.Bar':['$<TARGET_FILE_NAME:pyBar>'],
-  '@PROJECT_NAME@.FooBar':['$<TARGET_FILE_NAME:pyFooBar>'],
+  '@PYTHON_PROJECT@':[$<$<NOT:$<PLATFORM_ID:Windows>>:'.libs/*'>],
+  '@PYTHON_PROJECT@.Foo':['$<TARGET_FILE_NAME:pyFoo>'],
+  '@PYTHON_PROJECT@.Bar':['$<TARGET_FILE_NAME:pyBar>'],
+  '@PYTHON_PROJECT@.FooBar':['$<TARGET_FILE_NAME:pyFooBar>'],
   },
   include_package_data=True,
   classifiers=[
