--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-*.swp
-*.user
-
 build/
+build*/
 cache/
 
+.vagrant/
 /ci/samples/java/target
 
+# IDE
 .vs/
+.cache/
+# Kdevelop
+.kdev4/
+*.kdev4
+# vim
 compile_commands.json
+*.swp
+*.user
