--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,3 +84,7 @@ endif()
 include(python)
 include(java)
 include(dotnet)
+
+option(BUILD_EXAMPLES "Build examples" ON)
+message(STATUS "Build examples: ${BUILD_EXAMPLES}")
+add_subdirectory(examples)
