--- a/Foo/CMakeLists.txt
+++ b/Foo/CMakeLists.txt
@@ -8,16 +8,14 @@ target_include_directories(Foo
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>)
-target_compile_features(Foo PUBLIC cxx_std_11)
+target_compile_features(Foo PUBLIC cxx_std_17)
 set_target_properties(Foo PROPERTIES
   VERSION ${PROJECT_VERSION}
   PUBLIC_HEADER include/foo/Foo.hpp)
 #target_link_libraries(Foo PUBLIC ...)
 add_library(${PROJECT_NAME}::Foo ALIAS Foo)
 
-if(BUILD_TESTING)
-  add_subdirectory(test)
-endif()
+add_subdirectory(tests)
 
 # Install
 include(GNUInstallDirs)
