--- a/FooBarApp/CMakeLists.txt
+++ b/FooBarApp/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(FooBarApp "")
 target_sources(FooBarApp
   PRIVATE
     src/main.cpp)
-target_compile_features(FooBarApp PUBLIC cxx_std_11)
+target_compile_features(FooBarApp PRIVATE cxx_std_17)
 set_target_properties(FooBarApp PROPERTIES
   VERSION ${PROJECT_VERSION})
 # note: macOS is APPLE and also UNIX !
@@ -17,7 +17,7 @@ target_link_libraries(FooBarApp PRIVATE ${PROJECT_NAME}::FooBar)
 add_executable(${PROJECT_NAME}::FooBarApp ALIAS FooBarApp)
 
 if(BUILD_TESTING)
-  add_test(NAME cxx_FooBarApp_test COMMAND FooBarApp)
+  add_test(NAME cpp_FooBarApp_test COMMAND FooBarApp)
 endif()
 
 # Install
@@ -25,4 +25,4 @@ include(GNUInstallDirs)
 install(TARGETS FooBarApp
   EXPORT ${PROJECT_NAME}Targets
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-  )
+)
