--- a/Foo/python/CMakeLists.txt
+++ b/Foo/python/CMakeLists.txt
@@ -3,13 +3,14 @@ set_property(SOURCE foo.i PROPERTY SWIG_MODULE_NAME pyFoo)
 swig_add_library(pyFoo
   TYPE SHARED
   LANGUAGE python
-  OUTPUT_DIR ${CMAKE_BINARY_DIR}/python/${PYTHON_PROJECT}/Foo
+  OUTPUT_DIR ${CMAKE_BINARY_DIR}/python/${PYTHON_PROJECT}/foo
   SOURCES foo.i)
+add_library(${PROJECT_NAMESPACE}::pyFoo ALIAS pyFoo)
 
 target_include_directories(pyFoo
   PRIVATE
   ../include
-  ${Python_INCLUDE_DIRS}
+  ${Python3_INCLUDE_DIRS}
   )
 set_property(TARGET pyFoo PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
 
@@ -27,12 +28,12 @@ elseif(UNIX)
     INSTALL_RPATH "$ORIGIN:$ORIGIN/../../${PYTHON_PROJECT}/.libs"
     )
 endif()
-target_link_libraries(pyFoo PRIVATE Foo)
+target_link_libraries(pyFoo PRIVATE ${PROJECT_NAMESPACE}::Foo)
 
 # Variable PYTHON_LIBRARIES can contains keyword `optimized`
 # which won't be interpreted inside a generator expression.
 # i.e. we can't use: $<$<PLATFORM_ID:Windows>:${PYTHON_LIBRARIES}>
 # see: https://cmake.org/cmake/help/git-stage/command/target_link_libraries.html#command:target_link_libraries
 if(MSVC)
-  target_link_libraries(pyFoo PRIVATE ${Python_LIBRARIES})
+  target_link_libraries(pyFoo PRIVATE ${Python3_LIBRARIES})
 endif()
