--- a/FooBar/python/CMakeLists.txt
+++ b/FooBar/python/CMakeLists.txt
@@ -1,15 +1,19 @@
 set_property(SOURCE foobar.i PROPERTY CPLUSPLUS ON)
 set_property(SOURCE foobar.i PROPERTY SWIG_MODULE_NAME pyFooBar)
 swig_add_library(pyFooBar
+  TYPE SHARED
   LANGUAGE python
-  OUTPUT_DIR ${CMAKE_BINARY_DIR}/python/${PYTHON_PROJECT}/FooBar
+  OUTPUT_DIR ${CMAKE_BINARY_DIR}/python/${PYTHON_PROJECT}/foobar
   SOURCES foobar.i)
-set_property(TARGET pyFooBar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
+add_library(${PROJECT_NAMESPACE}::pyFooBar ALIAS pyFooBar)
+
 target_include_directories(pyFooBar
   PRIVATE
   ../include
-  ${Python_INCLUDE_DIRS}
+  ${Python3_INCLUDE_DIRS}
   )
+set_property(TARGET pyFooBar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
+
 # note: macOS is APPLE and also UNIX !
 if(APPLE)
   set_target_properties(pyFooBar PROPERTIES
@@ -24,12 +28,12 @@ elseif(UNIX)
     INSTALL_RPATH "$ORIGIN:$ORIGIN/../../${PYTHON_PROJECT}/.libs"
     )
 endif()
-target_link_libraries(pyFooBar PRIVATE FooBar)
+target_link_libraries(pyFooBar PRIVATE ${PROJECT_NAMESPACE}::FooBar)
 
 # Variable PYTHON_LIBRARIES can contains keyword `optimized`
 # which won't be interpreted inside a generator expression.
 # i.e. we can't use: $<$<PLATFORM_ID:Windows>:${PYTHON_LIBRARIES}>
 # see: https://cmake.org/cmake/help/git-stage/command/target_link_libraries.html#command:target_link_libraries
 if(MSVC)
-  target_link_libraries(pyFooBar	PRIVATE	${Python_LIBRARIES})
+  target_link_libraries(pyFooBar PRIVATE ${Python3_LIBRARIES})
 endif()
