--- a/.github/workflows/amd64_linux_dotnet.yml
+++ b/.github/workflows/amd64_linux_dotnet.yml
@@ -1,4 +1,4 @@
-name: .Net MacOS CI
+name: amd64 Linux .Net
 
 on:
   push:
@@ -10,17 +10,17 @@ on:
 jobs:
   # Building using the github runner environement directly.
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Check cmake
-      run: cmake --version
     - name: Swig install
-      run: brew install swig
+      run: sudo apt install -y swig
     - name: Check swig
       run: swig -version
     - name: Check dotnet
       run: dotnet --info
+    - name: Check cmake
+      run: cmake --version
     - name: Configure
       run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_DOTNET=ON
     - name: Build
