--- a/.github/workflows/amd64_linux_python.yml
+++ b/.github/workflows/amd64_linux_python.yml
@@ -1,4 +1,4 @@
-name: C++ MacOS CI
+name: amd64 Linux Python
 
 on:
   push:
@@ -8,14 +8,19 @@ on:
     - cron: '0 0 7,22 * *'
 
 jobs:
+  # Building using the github runner environement directly.
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Swig install
+      run: sudo apt install -y swig
+    - name: Check swig
+      run: swig -version
     - name: Check cmake
       run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
+      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_PYTHON=ON
     - name: Build
       run: cmake --build build --config Release --target all -v
     - name: Test
