--- a/.github/workflows/amd64_macos_dotnet.yml
+++ b/.github/workflows/amd64_macos_dotnet.yml
@@ -1,4 +1,4 @@
-name: C++ Linux CI
+name: amd64 macOS .Net
 
 on:
   push:
@@ -10,13 +10,19 @@ on:
 jobs:
   # Building using the github runner environement directly.
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - name: Check cmake
       run: cmake --version
+    - name: Swig install
+      run: brew install swig
+    - name: Check swig
+      run: swig -version
+    - name: Check dotnet
+      run: dotnet --info
     - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
+      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_DOTNET=ON
     - name: Build
       run: cmake --build build --config Release --target all -v
     - name: Test
