--- a/.github/workflows/amd64_windows_dotnet.yml
+++ b/.github/workflows/amd64_windows_dotnet.yml
@@ -1,4 +1,4 @@
-name: C++ Windows CI
+name: amd64 Windows .Net
 
 on:
   push:
@@ -15,8 +15,17 @@ jobs:
     - uses: actions/checkout@v2
     - name: Check cmake
       run: cmake --version
+    - name: Install SWIG 4.0.2
+      run: |
+        (New-Object System.Net.WebClient).DownloadFile("http://prdownloads.sourceforge.net/swig/swigwin-4.0.2.zip","swigwin-4.0.2.zip");
+        Expand-Archive .\swigwin-4.0.2.zip .;
+        echo "$((Get-Item .).FullName)/swigwin-4.0.2" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+    - name: Check swig
+      run: swig -version
+    - name: Check dotnet
+      run: dotnet --info
     - name: Configure
-      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release
+      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release -DBUILD_DOTNET=ON
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -- /verbosity:normal /maxcpucount
     - name: Test
