--- a/.github/workflows/amd64_windows_java.yml
+++ b/.github/workflows/amd64_windows_java.yml
@@ -1,4 +1,4 @@
-name: Python Windows CI
+name: amd64 Windows Java
 
 on:
   push:
@@ -22,8 +22,10 @@ jobs:
         echo "$((Get-Item .).FullName)/swigwin-4.0.2" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Check swig
       run: swig -version
+    - name: Check java
+      run: java -version
     - name: Configure
-      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release -DBUILD_PYTHON=ON
+      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release -DBUILD_JAVA=ON
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -- /verbosity:normal /maxcpucount
     - name: Test
