--- a/.github/workflows/amd64_macos_java.yml
+++ b/.github/workflows/amd64_macos_java.yml
@@ -9,23 +9,43 @@ on:
 
 jobs:
   # Building using the github runner environement directly.
-  build:
+  xcode:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Check cmake
-      run: cmake --version
     - name: Swig install
       run: brew install swig
     - name: Check swig
       run: swig -version
-    - name: Check java
-      run: java -version
+    - name: Check mvn
+      run: mvn --version
+    - name: Check cmake
+      run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_JAVA=ON
+      run: cmake -S. -Bbuild -G "Xcode" -DCMAKE_CONFIGURATION_TYPES=Release -DBUILD_JAVA=ON -DSKIP_GPG=ON
     - name: Build
-      run: cmake --build build --config Release --target all -v
+      run: cmake --build build --config Release --target ALL_BUILD -v
     - name: Test
-      run: CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --config Release --target test -v
+      run: cmake --build build --config Release --target RUN_TESTS -v
     - name: Install
-      run: cmake --build build --config Release --target install -v -- DESTDIR=install
+      run: cmake --build build --config Release --target install -v
+  make:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Swig install
+      run: brew install swig
+    - name: Check swig
+      run: swig -version
+    - name: Check mvn
+      run: mvn --version
+    - name: Check cmake
+      run: cmake --version
+    - name: Configure
+      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_JAVA=ON -DSKIP_GPG=ON
+    - name: Build
+      run: cmake --build build --target all -v
+    - name: Test
+      run: cmake --build build --target test -v
+    - name: Install
+      run: cmake --build build --target install -v
