--- a/.github/workflows/amd64_windows_java.yml
+++ b/.github/workflows/amd64_windows_java.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   # Building using the github runner environement directly.
-  build:
+  visual-studio:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
@@ -22,10 +22,10 @@ jobs:
         echo "$((Get-Item .).FullName)/swigwin-4.0.2" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Check swig
       run: swig -version
-    - name: Check java
-      run: java -version
+    - name: Check mvn
+      run: mvn.cmd --version
     - name: Configure
-      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release -DBUILD_JAVA=ON
+      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_BUILD_TYPE=Release -DBUILD_JAVA=ON -DSKIP_GPG=ON
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -- /verbosity:normal /maxcpucount
     - name: Test
