ci: add CMAKE_INSTALL_PREFIX to workflows

--- a/.github/workflows/amd64_macos_cpp.yml
+++ b/.github/workflows/amd64_macos_cpp.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Check cmake
       run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -G "Xcode" -DCMAKE_CONFIGURATION_TYPES=Release
+      run: cmake -S. -Bbuild -G "Xcode" -DCMAKE_CONFIGURATION_TYPES=Release -DCMAKE_INSTALL_PREFIX=install
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -v
     - name: Test
@@ -30,7 +30,7 @@ jobs:
     - name: Check cmake
       run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
+      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=install
     - name: Build
       run: cmake --build build --target all -v
     - name: Test
