--- a/.github/workflows/amd64_macos_python.yml
+++ b/.github/workflows/amd64_macos_python.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Check cmake
       run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -G "Xcode" -DCMAKE_CONFIGURATION_TYPES=Release -DBUILD_PYTHON=ON
+      run: cmake -S. -Bbuild -G "Xcode" -DCMAKE_CONFIGURATION_TYPES=Release -DCMAKE_INSTALL_PREFIX=install -DBUILD_PYTHON=ON
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -v
     - name: Test
@@ -38,7 +38,7 @@ jobs:
     - name: Check cmake
       run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DBUILD_PYTHON=ON
+      run: cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=install -DBUILD_PYTHON=ON
     - name: Build
       run: cmake --build build --target all -v
     - name: Test
