--- a/.github/workflows/amd64_windows_dotnet.yml
+++ b/.github/workflows/amd64_windows_dotnet.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Check cmake
       run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_CONFIGURATION_TYPES=Release -DBUILD_DOTNET=ON
+      run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_CONFIGURATION_TYPES=Release -DCMAKE_INSTALL_PREFIX=install -DBUILD_DOTNET=ON
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -v
     - name: Test
