cmake: Fix configure

--- a/FooBarApp/CMakeLists.txt
+++ b/FooBarApp/CMakeLists.txt
@@ -13,8 +13,8 @@ elseif(UNIX AND NOT APPLE)
   set_target_properties(FooBarApp PROPERTIES
     INSTALL_RPATH "$ORIGIN/../${CMAKE_INSTALL_LIBDIR}")
 endif()
-target_link_libraries(FooBarApp PRIVATE ${PROJECT_NAME}::FooBar)
-add_executable(${PROJECT_NAME}::FooBarApp ALIAS FooBarApp)
+target_link_libraries(FooBarApp PRIVATE ${PROJECT_NAMESPACE}::FooBar)
+add_executable(${PROJECT_NAMESPACE}::FooBarApp ALIAS FooBarApp)
 
 if(BUILD_TESTING)
   add_test(NAME cpp_FooBarApp_test COMMAND FooBarApp)
