--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,23 @@ if(NOT BUILD_TESTING)
   return()
 endif()
 
-file(GLOB PYTHON_SRCS "*.py")
-foreach(FILE_NAME IN LISTS PYTHON_SRCS)
-  add_python_test(${FILE_NAME})
-endforeach()
+if(BUILD_DOTNET)
+  file(GLOB DOTNET_SRCS "*.cs")
+  foreach(FILE_NAME IN LISTS DOTNET_SRCS)
+    add_dotnet_test(${FILE_NAME})
+  endforeach()
+endif()
+
+if(BUILD_JAVA)
+  file(GLOB JAVA_SRCS "*.java")
+  foreach(FILE_NAME IN LISTS JAVA_SRCS)
+    add_java_test(${FILE_NAME})
+  endforeach()
+endif()
+
+if(BUILD_PYTHON)
+  file(GLOB PYTHON_SRCS "*.py")
+  foreach(FILE_NAME IN LISTS PYTHON_SRCS)
+    add_python_test(${FILE_NAME})
+  endforeach()
+endif()
