--- a/FooBar/java/CMakeLists.txt
+++ b/FooBar/java/CMakeLists.txt
@@ -5,7 +5,7 @@ swig_add_library(jniFooBar
   TYPE OBJECT
   LANGUAGE java
   OUTPUT_DIR
-  ${PROJECT_BINARY_DIR}/java/${JAVA_PROJECT}/${JAVA_PACKAGE_PATH}/foobar
+  ${PROJECT_BINARY_DIR}/java/${JAVA_PROJECT}/${JAVA_PACKAGE_SRC_PATH}/foobar
   SOURCES foobar.i)
 
 set_target_properties(jniFooBar PROPERTIES
@@ -13,4 +13,4 @@ set_target_properties(jniFooBar PROPERTIES
   SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON
   POSITION_INDEPENDENT_CODE ON)
 target_include_directories(jniFooBar PRIVATE ${JNI_INCLUDE_DIRS})
-target_link_libraries(jniFooBar PRIVATE CMakeSwig::FooBar)
+target_link_libraries(jniFooBar PRIVATE ${PROJECT_NAMESPACE}::FooBar)
